@@ -1,6 +1,5 @@
-# WIP: Igniteを触ってみる
-触ってみます。Javaアプリケーションで、Igniteをキャッシュサーバとして使ってみます。  
-cf: https://qiita.com/mkyz08/items/81a526827a573ea17805
+# Igniteのインストール
+公式ドキュメント: https://ignite.apache.org/docs/latest/
 
 ## openjdkのインストール
 
@@ -16,7 +15,7 @@ java -version
 
 インストールされていない場合は推奨コマンド群が出てくるので、必要なバージョンのコマンドを叩けばOK。
 ```
-sudo apt install openjdk-17-jre-headless
+sudo apt install openjdk-11-jre-headless
 ```
 
 環境変数`JAVA_HOME`を設定する。
@@ -50,25 +49,5 @@ sudo ln -s ${binファイルのパス} /opt/apache-ignite
 Igniteを起動する。
 ```
 cd /opt/apache-ignite/bin
-sudo ./ignite.sh
-```
-
-## Javaアプリケーションの準備
-https://ignite.apache.org/docs/latest/quick-start/java#running-ignite-with-java-11  
-これ見ながらソースを作成した。javaのバージョン11でも17でもダメだった。
-
-### jarを配置して起動しようとしたらなんか例外
-
-```
-# ダメだった
-java -jar ${jar-file-name}
-```
-cf. https://blog1.mammb.com/entry/2020/12/28/090000  
-
-
-```
-# これもダメだった
-java \
---add-opens java.base/java.nio=ALL-UNNAMED \
--jar firstignite-0.0.1-SNAPSHOT.jar
+sudo ./ignite.sh ../examples/config/example-ignite.xml
 ```
